intro to sparkling water readme update